# RPG-Music-Tool

./: .gitignore  README.md  ROADMAP.md  build.bat  build.sh  color-settings.py  color_settings_01.py  config.ini  main.py  main_tab.py  music-player.py  opendir_test.py  options.py  path-settings.py  player.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_win.txt  settings_manager.py  settings_tab.py  song-settings.py  sound_manager.py  theme_predict.py
build_scripts/: build.bat  build.sh
docs/: ROADMAP.md
include/: app.py  music_player.py  player.py  predictive_text.py  tab.py  updater.py
managers/: image_manager.py  settings_manager.py  sound_manager.py  tab_manager.py
resources/: default_config.ini
tabs/: main_tab.py  paths_tab.py  settings_tab.py  sfx_paths_tab.py  sfx_tab.py  themes_tab.py
